src/parser/TnpExpressions.g4
grammar TnpExpressions ;

tnp_expression: expr ;

expr:
	STRING_LITERAL
	| BOOLEAN_LITERAL
	| number
	| qualified_identifier
	| expr '[' expr ']'
	| '(' expr ')'
	| prefix=('+'|'-'|'~'|'!') expr
	| expr binaryop=('*'|'/'|'%') expr
	| expr binaryop=('+'|'-') expr
	| expr ('<' '<' | '>' '>') expr
	| expr binaryop=('<=' | '>=' | '>' | '<') expr
	| expr binaryop=('==' | '!=') expr
	| expr binaryop='&' expr
	| expr binaryop='^' expr
	| expr binaryop='|' expr
	| expr binaryop='&&' expr
	| expr binaryop='||' expr
	| <assoc=right> expr binaryop='?' expr ':' expr
	| expr '(' ')'
	| expr '(' parameterList ')'
	;

parameterList:
	parameter (',' parameter)*
	;

parameter: expr
	| 'out' identifier
	| 'ref' identifier
	;

number: DECIMAL_LITERAL | HEX_LITERAL | FLOAT_LITERAL ;

qualified_identifier: identifier (identifier '.')* ;

identifier: IDENTIFIER;

BOOLEAN_LITERAL:
	'true'
	| 'false'
	;

STRING_LITERAL:	'"' (~["\\\r\n] | EscapeSequence)* '"';

DECIMAL_LITERAL:	('0' | [1-9] (Digits? | '_'+ Digits)) [lL]?;
HEX_LITERAL:		'0' [xX] [0-9a-fA-F] ([0-9a-fA-F_]* [0-9a-fA-F])? [lL]?;
FLOAT_LITERAL:		(Digits '.' Digits? | '.' Digits) ExponentPart? [fFdD]?
	| 		Digits (ExponentPart [fFdD]? | [fFdD])
	;

IDENTIFIER:	Letter LetterOrDigit*;

fragment LetterOrDigit:
	Letter
	| [0-9]
	;

fragment Letter:
	[a-zA-Z_]
	;

fragment EscapeSequence: '\\' 'u005c'? [btnfr"'\\]
	| '\\' 'u005c'? ([0-3]? [0-7])? [0-7]
	| '\\' 'u'+ HexDigit HexDigit HexDigit HexDigit
	;

fragment HexDigit: [0-9a-fA-F]
	;

fragment Digits: [0-9] ([0-9_]* [0-9])?
	;

fragment ExponentPart:
	[eE] [+-]? Digits
	;
